# catasto-db

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 00641d8d18f3_added_ctmp_a_quadri_unione.py  044e3a98478a_adding_cucodcau.py  0457a2bbc011_added_ctis_schema.py  05cf7b1812ee_added_ctcn_message_log.py  08215a0fc57f_added_ctcn_cuidenti.py  0b3dc6b9ed65_added_ctcn_ctcodris.py  0f0c5ab0f730_added_catasto_views.py  190ca23c6a14_added_ctmp_a_fogli.py  1982aabfb5e9_added_ctcn_sezioni_.py  1adf3d803ca1_added_ctmp_a_libretti.py  1bd9c920a51a_added_ctcn_cuarcuiu.py  1f81a8a100e8_added_ctcn_metadati.py  228fb2ce24d3_added_ctcn_cttipnot.py  2507f2e1e507_added_ctmp_linee_vest.py  260a4359f6f9_added_ctmp_a_raster.py  2aa6b7a59a8e_added_ctcn_ctpartic.py  2dd333f65ddc_added_ctcn_cutipnot.py  2deec6474019_added_ctmp_testi.py  3241a81a8849_added_ctcn_cuutilit.py  347ca562f469_adding_version.py  3962da0abb5a_added_ctmp_libretti.py  3c3b5c67c224_added_ctcn_cttitoli.py  3fc7bd349450_added_ctcn_comuni_.py  4ad75aaea060_added_ctmp_a_particelle.py  4efc3b267ac9_added_ctcn_new_views.py  51bc73db4804_added_ctcn_ctqualit.py  5899db015043_added_ctcn_ctfisica.py  5c8b78c99c64_added_ctmp_tipo_trasformazioni.py  609c563e08c9_added_catasto_db_map_sp.py  6157bae19f10_init_catasto_db.py  65619291306a_added_ctcn_ctriserv.py  6a6405b879d3_added_ctcn_comuni.py  6f1c424692e6_added_ctmp_a_metadati.py  713b8e1036cc_added_ctmp_a_schema.py  7a75b03ea889_added_ctmp_message_log.py  (+37 more)
app/: configs.py
app/geoserver/: api.py  (+1 more)
sql/: .sqlfluff
(+433 files in other folders)
